# molokki

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml
aoc2023/: .gitignore
aoc2023/src/: day_1.rs
brosh/: .gitignore  Cargo.toml  README.md  package.nix
brosh/crates/core/: README.md
brosh/devtools/: run-tests.sh
brosh/pkgs/bash/: default.nix
deus-ex-iw-patcher/: Cargo.toml  README.md  package.nix
deus-ex-iw-patcher/src/: main.rs
fallout-save-editor/: .gitattributes  Cargo.toml  README.md  flake.nix  package.nix  scripts.lst  shell.nix
fallout-save-editor/hack/: gen_save_script_tests.py  gen_saves.py
fallout-save-editor/saves/SLOT01/: ARBRIDGE.SAV  ARCAVES.SAV  ARGARDEN.SAV  ARTEMPLE.SAV  ARVILLAG.SAV  AUTOMAP.SAV  BROKEN1.SAV  BROKEN2.SAV  DENBUS1.SAV  DENBUS2.SAV  GECKJUNK.SAV  GECKPWPL.SAV  GECKSETL.SAV  GECKTUNL.SAV  GSTCAV1.SAV  GSTCAV2.SAV  GSTFARM.SAV  KLACANYN.SAV  KLADWTWN.SAV  KLAGRAZ.SAV  KLATOXCV.SAV  KLATRAP.SAV  MODGARD.SAV  MODINN.SAV  MODMAIN.SAV  NCR1.SAV  NCRENT.SAV  NEWR1.SAV  NEWR2.SAV  NEWR3.SAV  NEWRST.SAV  RAIDERS1.SAV  RAIDERS2.SAV  REDDOWN.SAV  REDMENT.SAV  REDMTUN.SAV  REDWAME.SAV  V15ENT.SAV  V15SENT.SAV  VCTYCOCL.SAV  (+3 more)
fallout-save-editor/saves/SLOT01/proto/critters/: 00000097.pro
fallout-save-editor/src/: main.rs  parser.rs  ui.rs
fallout-save-editor/tests/: map_save.rs
gh-release/: .gitignore  README.md  package.nix
kube-operator-poc-rs/: .gitignore  Cargo.toml  README.md  package.nix
kube-operator-poc-rs/.cargo/: config.toml
kube-operator-poc-rs/crates/krangle-api/: Cargo.toml
kube-operator-poc-rs/crates/krangle-api/src/: main.rs
kube-operator-poc-rs/crates/krangle-device/: Cargo.toml
kube-operator-poc-rs/crates/krangle-device/src/: main.rs
kube-operator-poc-rs/crates/krangle-operator/: Cargo.toml
kube-operator-poc-rs/crates/krangle-operator/src/: main.rs
kube-operator-poc-rs/crates/xtask-crdgen/: Cargo.toml
kube-operator-poc-rs/crates/xtask-crdgen/src/: main.rs
kube-operator-poc-rs/k8s/: k3d-config.yaml
kube-operator-poc-rs/k8s/krangle-api/: deployment.yaml
kube-operator-poc-rs/krangle-operator/: Cargo.toml
kube-operator-poc-rs/krangle-operator/src/: controller.rs
load-balancing-ts/: .gitignore  .mocharc.json  README.md  package.json  package.nix  pnpm-lock.yaml
load-balancing-ts/src/: index.ts
open-telemetry-contrib-dev/: .gitignore  README.md  package.nix
pipemixer/: .gitignore  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
pipemixer/src/: main.rs
poe-trade-overlay/: .gitignore  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
possu/: .gitignore  Cargo.toml  README.md  package.nix
rojekti/: .gitignore  Cargo.toml  README.md  TODO.md  default.nix  fixture_rojekti.sh  flake.nix  package.nix  shell.nix
rojekti/pkg/: PKGBUILD
rojekti/src/: config.rs  error.rs  main.rs  project.rs  tmux.rs
rojekti/src/command/: debug.rs  edit.rs  list.rs  mod.rs  start.rs
rojekti/src/templates/: sample_config.yml  tmux.sh.jinja
rojekti/templates/: tmux.sh
rojekti/tests/: cli.rs  test_list.rs  test_start.rs
rojekti/tests/support/: autosavevim
rojekti/tests/workdir/: mod.rs
src/: main.rs
swkotor-mod/: .editorconfig  Cargo.toml  README.md  build.rs  flake.nix  package.nix  shell.nix
swkotor-mod/scripts/: find_disassemble.py  steam-debugger.sh
swkotor-mod/src/: lib.rs
swkotor-mod/src/engine/: dinput8_dll.rs  kotor.rs  mod.rs
swkotor-mod/src/entry/: dinput8_mock.rs  mod.rs
swkotor-mod/src/graphics/: glstate.rs  mod.rs  opengl_bindings.rs  rendering.rs
swkotor-mod/src/liveqa/: liveassert.rs  mod.rs  runner.rs
swkotor-mod/src/mem/: mod.rs
swkotor-mod/src/system/: dll_loader.rs
swkotor-mod/src/util/: imgui.rs  memory_patcher.rs  mod.rs  needle_finder.rs  poc.rs  textdraw.rs
swkotor-mod/src/util/iat/: common.rs  createfile.rs  mod.rs  swapbuffers.rs
swkotor-mod/src/util/iat/tests/: iat_register_tests.rs
templates/: tmux.stpl
whack/: Cargo.toml  README.md  package.nix
