[package]
name = "fallout-save-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
flate2 = "1.0"
bitflags = "2.5.0"
slint = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }

[build-dependencies]
slint-build = "1.6.0"
