[package]
name = "rojekti"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19.0"
yaml-rust2 = "0.8.1"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
rand = "0.8.0"

