[package]
name = "swkotor-mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
liveqa_tests = ["inventory", "mktemp"]

[dependencies]
env_logger = "0.11.6"
gl = "0.14.0"
imgui = "0.9.0"
imgui-opengl-renderer = "0.12.1"
inventory = { version = "0.3.17", optional = true }
log = "0.4.25"
mktemp = { version = "0.5.1", optional = true }
plthook = "0.2.2"
windows = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading"] }

[build-dependencies]
gl_generator = "0.14.0"
