[package]
name = "krangle-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
uuid = { version = "1", features = ["v4"] }
