[package]
name = "krangle-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "client", "derive"] }
schemars = "0.8.22"
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
